--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
                     year: "2021", 
                     rating: "8.4",
                     poster: "https://image.tmdb.org/t/p/w500/1g0dhYtq4irTY1GPXvft6k4YLjm.jpg",
-                    videoUrl: "https://streamable.com/e/your-video-6" 
+                    videoUrl: "https://streamable.com/7gh1wy" 
                 }
             ],
             originals: [
