--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Favicon Code -->
+        <link rel="icon" type="image/png" href="https://media.tenor.com/hiZEAXH0UnoAAAAM/netflix-cinema.gif">
     <title>Netflix Clone</title>
     <style>
         * {
